[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-threads"
version = "0.1.1"
description = "Read-only Threads retrieval through authenticated, single-target CLI primitives"
readme = "README.md"
authors = [{ name = "tjdwls101010" }]
keywords = ["threads", "cli", "read-only", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
browser = ["scrapling[fetchers]>=0.4.10,<0.5"]
dev = ["pytest>=8", "ruff>=0.8", "pre-commit>=3.8", "build>=1.2", "jsonschema>=4.0"]

[project.scripts]
agentic-threads = "agentic_threads.cli:main"

[project.urls]
Homepage = "https://github.com/tjdwls101010/Agentic-Threads"
Issues = "https://github.com/tjdwls101010/Agentic-Threads/issues"
Changelog = "https://github.com/tjdwls101010/Agentic-Threads/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_threads"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
